--- a/crates/ra_hir/Cargo.toml
+++ b/crates/ra_hir/Cargo.toml
@@ -21,6 +21,8 @@ tt = { path = "../ra_tt", package = "ra_tt" }
 test_utils = { path = "../test_utils" }
 ra_prof = {path = "../ra_prof" }
 
+lang_api = { path = "../lang_api" }
+
 [dev-dependencies]
 flexi_logger = "0.11.0"
 insta = "0.7.0"
